* Make -dev package depend on libgda3-dev and pkg-config. Drop   outdated Replaces: flags * Omit the new GDA backend package which is not ready for   widespread usage yet. * remove the copied symbols file in the clean target (easier cross-building)

--- a/debian/trunk/debian/rules
+++ b/debian/trunk/debian/rules
@@ -45,7 +45,8 @@ clean/libqof2::
 
 else
 
-DEB_CONFIGURE_EXTRA_FLAGS += --enable-gdabackend
+# GDA backend isn't ready.
+#DEB_CONFIGURE_EXTRA_FLAGS += --enable-gdabackend
 ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
 DEB_MAKE_CHECK_TARGET = check
 endif
