adding AC_CONFIG_MACRO_DIR - thought I'd done this already.

--- a/qof/configure.ac
+++ b/qof/configure.ac
@@ -23,6 +23,7 @@ AC_DEFUN([SQLREVISION], [1])
 AC_DEFUN([SQLAGE], [0])
 AC_DEFUN([LIBSQLVERS], [SQLCURRENT:SQLREVISION:SQLAGE])
 LIBQOFSQL_LIBRARY_VERSION=LIBSQLVERS
+AC_CONFIG_MACRO_DIR([m4])
 
 AC_SUBST(LIBQOF_LIBRARY_VERSION)
 AC_SUBST(LIBQOFSQL_LIBRARY_VERSION)
