package new upstream release

--- a/debian/trunk/debian/control
+++ b/debian/trunk/debian/control
@@ -4,10 +4,10 @@ Priority: optional
 Maintainer: Neil Williams <codehelp@debian.org>
 Uploaders: Goedson Teixeira Paixao <goedson@debian.org>
 Build-Depends: cdbs, debhelper (>= 5), xsltproc,
- libglib2.0-dev (>= 2.6.0), libxml2-dev (>= 2.5.10), libgda3-dev, 
+ libglib2.0-dev (>= 2.9.0), libxml2-dev (>= 2.5.10), libgda3-dev, 
  libsqlite0-dev
 Build-Depends-Indep: doxygen
-Standards-Version: 3.8.1
+Standards-Version: 3.8.2
 Homepage: http://alioth.debian.org/projects/qof/
 Vcs-Browser: http://svn.debian.org/viewsvn/qof/trunk/qof/
 Vcs-Svn: svn://svn.debian.org/svn/qof/trunk/debian/
@@ -18,7 +18,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends}, qof-data
 Recommends: libqof2-backend-qsf | libqof2-backend-sqlite | libqof2-backend-gda
 Conflicts: pilot-qof (<< 0.1.1-2)
 Description: Query Object Framework
- A framework to allow the execution of SQL-type queries
+ QOF is a framework to allow the execution of SQL-type queries
  using collections of in-memory objects as 'tables'.
  .
  This package provides the shared libraries needed
@@ -31,7 +31,7 @@ Depends: libgda3-dev, libglib2.0-dev, libqof2 (= ${binary:Version}),
  ${misc:Depends}, pkg-config
 Suggests: libqof-doc
 Description: Query Object Framework - Development Headers
- A framework to allow the execution of SQL-type queries
+ QOF is a framework to allow the execution of SQL-type queries
  using collections of in-memory objects as 'tables'.
  .
  This package provides the files needed to develop
@@ -72,7 +72,7 @@ Architecture: any
 Depends: libqof2 (= ${binary:Version}), ${misc:Depends}
 Suggests: libqof-doc
 Description: Query Object Framework - Debug Symbols
- A framework to allow the execution of SQL-type queries
+ QOF is a framework to allow the execution of SQL-type queries
  using collections of in-memory objects as 'tables'.
  .
  This package provides the debugging symbols that may be
@@ -84,7 +84,7 @@ Architecture: all
 Depends: ${misc:Depends}
 Recommends: www-browser, dwww
 Description: Query Object Framework - API Documentation
- A framework to allow the execution of SQL-type queries
+ QOF is a framework to allow the execution of SQL-type queries
  using collections of in-memory objects as tables.
  .
  This package provides the documentation of the QOF
