* New upstream release * Avoid broken deprecation of g_static_private_get and   allow for replacement with g_private_get in glib2.0 2.32.   (Closes: #707415) * Drop default of Werror.

--- a/debian/trunk/debian/rules
+++ b/debian/trunk/debian/rules
@@ -44,7 +44,7 @@ build/libqof2::
 	$(RM) doc/html/jquery.js
 
 clean/libqof2::
-	$(RM) debian/libqof2.symbols
+	$(RM) debian/libqof2.symbols po/*.gmo
 
 else
 
