--- a/configure.ac
+++ b/configure.ac
@@ -7,18 +7,18 @@ dnl # ******************************
 
 AC_DEFUN([MAJOR], [0])
 AC_DEFUN([MINOR], [8])
-AC_DEFUN([MICRO], [7])
+AC_DEFUN([MICRO], [8])
 AC_DEFUN([MY_VERSION], [MAJOR.MINOR.MICRO])
-AC_INIT([qof], [0.8.7], [http://lists.sourceforge.net/lists/listinfo/qof-devel])
+AC_INIT([qof], [0.8.8], [http://lists.sourceforge.net/lists/listinfo/qof-devel])
 AC_PREREQ(2.68)
 AC_GNU_SOURCE
 AC_DEFUN([QOFCURRENT], [2])
-AC_DEFUN([QOFREVISION], [4])
+AC_DEFUN([QOFREVISION], [5])
 AC_DEFUN([QOFAGE], [0])
 AC_DEFUN([LIBQOFVERS], [QOFCURRENT:QOFREVISION:QOFAGE])
 LIBQOF_LIBRARY_VERSION=LIBQOFVERS
 AC_DEFUN([SQLCURRENT], [1])
-AC_DEFUN([SQLREVISION], [1])
+AC_DEFUN([SQLREVISION], [2])
 AC_DEFUN([SQLAGE], [0])
 AC_DEFUN([LIBSQLVERS], [SQLCURRENT:SQLREVISION:SQLAGE])
 LIBQOFSQL_LIBRARY_VERSION=LIBSQLVERS
@@ -34,7 +34,7 @@ VERSION=AC_PACKAGE_VERSION
 AC_SUBST(VERSION)
 PACKAGE=AC_PACKAGE_NAME
 AC_SUBST(PACKAGE)
-AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
+AM_INIT_AUTOMAKE()
 
 AC_PROG_LIBTOOL
 AC_CONFIG_HEADERS([config.h])
@@ -158,7 +158,7 @@ dnl # *******************************
 GETTEXT_PACKAGE=qof
 AC_SUBST(GETTEXT_PACKAGE)
 AM_GNU_GETTEXT([external])
-AM_GNU_GETTEXT_VERSION([0.17])
+AM_GNU_GETTEXT_VERSION([0.19.2])
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"], [gettext domain])
 
 dnl # ********************************
