--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,60 @@
+ABOUT-NLS
+INSTALL
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+compile
+config.guess
+config.h
+config.h.in
+config.log
+config.rpath
+config.status
+config.sub
+configure
+depcomp
+install-sh
+libtool
+ltmain.sh
+missing
 tarballs
+*.tar.gz
+doc/html/*
+doc/xml
+doc/doxygen.cfg
+doc/doxygen.log
+doc/doxygen_sqlite3.db
+*.o
+*.lo
+*.la
+.deps
+.libs
+po/*.gmo
+po/POTFILES
+po/qof.pot
+po/stamp-po
+po/Makefile.in.in
+po/remove-potcdate.sed
+m4/*
+qof.pc
+qof.symbols
+qof/test/test-book-merge
+qof/test/test-date
+qof/test/test-event
+qof/test/test-guid
+qof/test/test-numeric
+qof/test/test-object
+qof/test/test-querynew
+qof/test/test-recursive
+qof/test/test-sql
+doc/qof.devhelp2
+lib/libsql/lexer.c
+lib/libsql/parser.c
+lib/libsql/parser.h
+lib/libsql/parser.output
+lib/libsql/sql_parse_test
+po/Makevars.template
+stamp-h1
+test-driver
+
