Fix dependency of sql test program
Updated automake needs the libsql.la explicit dependency.

--- a/lib/libsql/Makefile.am
+++ b/lib/libsql/Makefile.am
@@ -43,7 +43,7 @@ lexer.c: lexer.l parser.c
 
 sql_parse_test_SOURCES=sql_parse_test.c
 # sql_parse_test_LDFLAGS = $(LIBGDA_LIBS)
-sql_parse_test_DEPENDENCIES =
+sql_parse_test_DEPENDENCIES = ./libqofsql.la
 sql_parse_test_LDADD = ./libqofsql.la ${GLIB_LIBS}
 
 tests: sql_parse_test
