Fix distcheck clean

--- a/doc/html/Makefile.am
+++ b/doc/html/Makefile.am
@@ -7,6 +7,6 @@ clean-local:
 	${RM} *.png
 	${RM} *.css
 	${RM} installdox
-	${RM} *.php dynsections.js
+	${RM} *.php dynsections.js menu.js menudata.js
 	${RM} *.idx jquery.js
 
